# rmsynth

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  zensical.toml
.github/workflows/: deploy.yml
docs/: architecture.md  autotuning.md  background.md  caching-contracts.md  cli.md  configuration.md  core-toolkit.md  cpp-core.md  decoding-strategies.md  index.md  multi-order.md  optimization.md  osd-module.md  references.md
src/: CMakeLists.txt
src/api/: CMakeLists.txt
src/api/c/: rmsynth.cpp  rmsynth.h
src/api/cxx/: rmsynth.hpp
src/api/python/: bindings.cpp
src/api/python/rmsynth/: __init__.py  autotune.py  bench.py  cli.py  contracts.py  core.py  decoders.py  optimizer.py  osd.py  report.py  rm_cache.py  rmcore.py  rotk.py
src/core/: CMakeLists.txt  anf.cpp  anf.h  bitops.h  decode_bruteforce.cpp  decode_bruteforce.h  dumer.cpp  dumer.h  dumer_list.cpp  dumer_list.h  dumer_list_chase.cpp  dumer_list_chase.h  parallel.h  puncture.h  rm_code.cpp  rm_code.h  rpa.cpp  rpa.h  tdepth.cpp  tdepth.h  util.h
